public interface IEntity
{
    Guid Id { get; }
}